Avoid inefficient Number instance creation.